added jvm opts to project.clj